cfn_benchmark/cfn_templates/wso2__aws-apim/database/database.yaml
# Copyright (c) 2021, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

AWSTemplateFormatVersion: 2010-09-09
Description: WSO2 API Manager deployment with WSO2 Micro Integrator - Database
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Basic Configuration
        Parameters:
          - DBUsername
          - DBPassword
      - Label:
          default: Advanced Configuration
        Parameters:
          - DB
          - DBAllocationStorage
          - DBInstanceType
          - EnvironmentName
          - WSO2VPC
          - WSO2PrivateSubnet1
          - WSO2PrivateSubnet2
    ParameterLabels:
      DB:
        default: Database
      DBUsername:
        default: DB Username
      DBPassword:
        default: DB Password
      DBAllocationStorage:
        default: Allocation Storage
      DBInstanceType:
        default: DB Instance Type
      EnvironmentName:
        default: Environment Name
      WSO2VPC:
        default: VPC ID
      WSO2PrivateSubnet1:
        default: WSO2 Private Subnet 1 - ID
      WSO2PrivateSubnet2:
        default: WSO2 Private Subnet 2 - ID
Resources:
  WSO2APIMDBInstance:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      VPCSecurityGroups:
        - !Ref WSO2APIMDBInstanceSecurityGroup
      DBInstanceClass: !Ref DBInstanceType
      AllocatedStorage: !Ref DBAllocationStorage
      BackupRetentionPeriod: '0'
      DBInstanceIdentifier: WSO2APIMDBInstance
      DBName: !If [UseSQLServerDB, "", WSO2AMDB]
      LicenseModel: !If [UseLicensedVersion, license-included, !Ref 'AWS::NoValue']
      EngineVersion: !Select [1, !Split ["_", !FindInMap [ DBEngineMap, !Ref DB, DBEngine]]]
      Engine: !Select [0, !Split ["_", !FindInMap [ DBEngineMap, !Ref DB, DBEngine]]]
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      MultiAZ: 'false'
      StorageType: gp2
      DBSubnetGroupName: !Ref WSO2APIMDBSubnetGroup
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} WSO2APIMDBInstance
  WSO2APIMDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: DB Subnet Group
      SubnetIds:
        - !Ref WSO2PrivateSubnet1
        - !Ref WSO2PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} WSO2APIMDBSubnetGroup
  WSO2APIMDBInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref WSO2VPC
      GroupDescription: DB Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '1521'
          ToPort: '1521'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '1433'
          ToPort: '1433'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} WSO2APIMDBInstanceSecurityGroup
Outputs:
  WSO2APIMDBInstanceSecurityGroup:
    Value: !Ref WSO2APIMDBInstanceSecurityGroup
    Description: API Manager DB Security Group
  WSO2APIMDBSubnetGroup:
    Value: !Ref WSO2APIMDBSubnetGroup
    Description: API Manager DB Subnet Group
  WSO2APIMDBInstance:
    Value: !Ref WSO2APIMDBInstance
    Description: API Manager DB Instance
  WSO2APIMDBInstanceEndpointAddress:
    Value: !GetAtt WSO2APIMDBInstance.Endpoint.Address
    Description: API Manager DB Instance Endpoint Address
  WSO2APIMDBInstanceEndpointPort:
    Value: !GetAtt WSO2APIMDBInstance.Endpoint.Port
    Description: API Manager DB Instance Endpoint Port
Parameters:
  DBUsername:
    Type: String
    MinLength: 4
    AllowedPattern: '[A-Za-z0-9\-]+'
  DBPassword:
    Type: String
    MinLength: 8
    NoEcho: true
  DBAllocationStorage:
    Description: Provide storage size in Gigabytes
    Type: Number
    Default: 200
  DBInstanceType:
    Type: String
    Default: db.t2.medium
    AllowedValues:
      - db.t2.medium
      - db.t2.large
      - db.t2.xlarge
      - db.t2.2xlarge
      - db.m3.medium
      - db.m3.large
      - db.m3.xlarge
      - db.m3.2xlarge
      - db.m4.large
      - db.m4.xlarge
      - db.m5.large
  DB:
    Type: String
    Default: MySQL-5.7
    AllowedValues:
      - MySQL-5.7
      - MySQL-8.0
      - Postgres-14.6
      - Postgres-15.2
      - Oracle-SE2-19
      - SQLServer-SE-14.00
      - SQLServer-SE-15.00
  EnvironmentName:
    Type: String
    Description: An environment name that is prefixed to resource names
    Default: Dev
  WSO2VPC:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID of your existing Virtual Private Cloud (VPC)
  WSO2PrivateSubnet1:
    Type: AWS::EC2::Subnet::Id
    Description: Private Subnet for PuppetMaster, Prodcut Instance, EFS and the DB
  WSO2PrivateSubnet2:
    Type: AWS::EC2::Subnet::Id
    Description: Private Subnet for Prodcut Instance and the DB
Mappings:
  DBEngineMap:
    MySQL-5.7:
      DBEngine: "mysql_5.7"
    MySQL-8.0:
      DBEngine: "mysql_8.0"
    Postgres-14.6:
      DBEngine: "postgres_14.6"
    Postgres-15.2:
      DBEngine: "postgres_15.2"
    SQLServer-SE-14.00:
      DBEngine: "sqlserver-se_14.00"
    SQLServer-SE-15.00:
      DBEngine: "sqlserver-se_15.00"
    Oracle-SE2-19:
      DBEngine: "oracle-se2_19"
Conditions:
  UseSQLServerDB: !Equals [sqlserver-se, !Select [0, !Split ["_", !FindInMap [ DBEngineMap, !Ref DB, DBEngine]]]]
  UseLicensedVersion: !Or [ !Equals [sqlserver, !Select [0, !Split ["-", !FindInMap [ DBEngineMap, !Ref DB, DBEngine]]]], !Equals [oracle, !Select [0, !Split ["-", !FindInMap [ DBEngineMap, !Ref DB, DBEngine]]]] ]
